--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/uploads/*
 /public/*
 !/public/assets/
+!/public/index.php
 !/public/assets/addons/
 !/public/assets/addons/cms/
 !/public/assets/addons/cms/css/
