--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,10 @@
         "topthink/think-installer": "^1.0.14",
         "topthink/think-queue": "1.1.6",
         "topthink/think-helper": "^1.0.7",
-        "karsonzhang/fastadmin-addons": "~1.3.2",
         "overtrue/pinyin": "^3.0",
-        "phpoffice/phpspreadsheet": "1.19",
+        "phpoffice/phpspreadsheet": "^1.19",
         "overtrue/wechat": "^4.6",
-        "nelexa/zip": "^3.3",
+        "nelexa/zip": "^4.0",
         "ext-json": "*",
         "ext-curl": "*",
         "ext-pdo": "*",
@@ -33,7 +32,11 @@
         "txthinking/mailer": "^2.0"
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "allow-plugins": {
+            "easywechat-composer/easywechat-composer": true,
+            "topthink/think-installer": true
+        }
     },
     "repositories": [
         {
